--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 
       <main>
         <div class="main">
+        <div class="main-index">
         <div class="head-sect">
             <img src="images/book-pic.jpg">
             <div class="head-container">
                 <div class="div"></div>
-                <div class="head-text">
+                <div class="head-text primary">
                     <h1>BOOKSMART</h1>
                     <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                         ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
@@ -63,6 +64,17 @@
                         receives the attention they deserve. Our expert staff will engage and motivate your child to reach the highest 
                         levels of academic success.</p>
                 </div>
+                <div class="head-text media-head-text">
+                  <h1>BOOKSMART</h1>
+                  <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
+                      ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
+                      Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
+                      and led Regents and State Exam grading.</p>
+                  <br>
+                  <p>Book Smart emphasizes a low student to instructor ratio to ensure that we meet your child’s individual needs and 
+                      receives the attention they deserve. Our expert staff will engage and motivate your child to reach the highest 
+                      levels of academic success.</p>
+              </div>
             </div>
         </div>
         <div class="mid-sect">
@@ -87,6 +99,7 @@
         </div>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.4014465034616!2d-74.19393528454741!3d40.53271915650086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24eb0aa6ff693%3A0x9d5ced9eb5780c84!2sBook%20Smart%20Tutoring%20Inc.!5e0!3m2!1sen!2sus!4v1657211323141!5m2!1sen!2sus" width="1300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         </div>
         </div>
       </main>
