addition of comment

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </div>
         </div>
         <div class="mid-sect">
+        <!--Changes will go here-->
             <div class="gallery">
                 <div class="img-container">
                     <p>TACHS</p>
