--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             </div>
         </div>
         <div class="mid-sect">
-        <!--Changes will go here-->
+          <div class="directions">
+            <h3>Click on the images below for more information</h3>
+          </div>
             <div class="gallery">
                 <div class="img-container">
                     <p>TACHS</p>
