--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <div class="contact-heading">
             <h1>Contact Us!</h1>
         </div>
-        <form class="needs-validation" novalidate>
+        <form action="https://formsubmit.co/eddy.kram@gmail.com" method="POST" class="needs-validation" novalidate>
             <div class="row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom01">First name</label>
