--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,14 @@
             <div class="row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom01">First name</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="" required>
+                <input name="firstname" type="text" class="form-control" id="validationCustom01" placeholder="First name" value="" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom02">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="" required>
+                <input name="lastname" type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -75,7 +75,7 @@
                   </div>
                   <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Message</label>
-                    <textarea rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
+                    <textarea name="New Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
                   </div>
                 </div>   
             <button class="btn btn-primary" type="submit">Submit form</button>
