--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,11 @@
               <div class="row">
                 <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                    <input name="email" type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
                   </div>
                   <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Message</label>
-                    <textarea name="New Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
+                    <textarea name="message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
                   </div>
                 </div>   
             <button class="btn btn-primary" type="submit">Submit form</button>
