--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
               <div class="row">
                 <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Email</label>
-                    <input name="Email _replyto" type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                    <input name="Email" type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
                   </div>
                   <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Message</label>
