--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
           <input type="hidden" name="_subject" value="New Message!">
           <input type="hidden" name="_autoresponse" value="Thank you for messaging BOOKSMART! We will get to your email shortly.">
           <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_next" value="thanks.html">
             <div class="row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom01">First name</label>
