--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                     <textarea name="Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
                   </div>
                 </div>   
-            <button class="btn btn-primary" type="submit">Submit form</button>
+            <button class="btn btn-primary" type="submit" id="remove-text" onclick="javascript:eraseText();">Submit form</button>
           </form>
           
           <script>
@@ -105,6 +105,7 @@
             }, false);
           })();
           </script>
+          <script src="remove-text.js" type="text/javascript"></script>
           </div>
           <div class="phone-info">
             <h1>Give us a call!</h1>
