footer and image changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="head-container">
                 <div class="div"></div>
                 <div class="head-text primary">
-                    <h1>BOOKSMART</h1>
+                    <h1 class="home-logo"><img src="images/booksmart-logo.png"></h1> 
                     <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                         ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                         Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
@@ -65,7 +65,7 @@
                         levels of academic success.</p>
                 </div>
                 <div class="head-text media-head-text">
-                  <h1>BOOKSMART</h1>
+                  <h1 class="home-logo"><img src="images/booksmart-logo.png"></h1>
                   <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                       ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                       Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
@@ -130,11 +130,11 @@
           <span class="text-muted">© 2022 Book Smart Tutoring Inc.</span>
         </div>
     
-        <ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <!--<ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
+        </ul>-->
       </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
