--- a/shsat.html
+++ b/shsat.html
@@ -131,11 +131,11 @@
           <span class="text-muted">© 2022 Book Smart Tutoring Inc.</span>
         </div>
     
-        <ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <!--<ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
+        </ul>-->
       </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
