--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,6 @@
         </div>
         <form target="_blank" action="https://formsubmit.co/eddy.kram@gmail.com" method="POST" class="needs-validation" novalidate>
           <input type="hidden" name="_subject" value="New Message!">
-          <input type="hidden" name="_autoresponse" value="Thank you for messaging BOOKSMART! We will get to your email shortly.">
           <input type="hidden" name="_template" value="table">
           <input type="hidden" name="_next" value="https://eddykram.github.io/booksmart/thanks.html">
             <div class="row">
@@ -82,7 +81,7 @@
                     <textarea name="Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
                   </div>
                 </div>   
-            <button class="btn btn-primary" type="submit" id="remove-text" onclick="javascript:eraseText();">Submit form</button>
+            <button class="btn btn-primary" type="submit">Submit form</button>
           </form>
           
           <script>
@@ -105,7 +104,6 @@
             }, false);
           })();
           </script>
-          <script src="remove-text.js" type="text/javascript"></script>
           </div>
           <div class="phone-info">
             <h1>Give us a call!</h1>
@@ -143,11 +141,11 @@
           <span class="text-muted">© 2022 Book Smart Tutoring Inc.</span>
         </div>
     
-        <ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <!--<ul style="padding-right: 20px" class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
+        </ul>-->
       </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
