--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                   </div>
                   <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Message</label>
-                    <textarea name="Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
+                    <textarea style="max-height: 200px" name="Message" rows="1" type="text" class="form-control" placeholder="Message" required></textarea>
                   </div>
                 </div>   
             <button class="btn btn-primary" type="submit">Submit form</button>
