adds booksmart logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="head-container">
                 <div class="div"></div>
                 <div class="head-text primary">
-                    <h1 class="home-logo"><img src="images/booksmart-logo.png"></h1> 
+                    <h1 class="home-logo"><img src="images/booksmartLogo.png"></h1> 
                     <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                         ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                         Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
@@ -65,7 +65,7 @@
                         levels of academic success.</p>
                 </div>
                 <div class="head-text media-head-text">
-                  <h1 class="home-logo"><img src="images/booksmart-logo.png"></h1>
+                  <h1 class="home-logo"><img src="images/booksmartLogo.png"></h1>
                   <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                       ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                       Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
