update branch change

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div class="main">
         <div class="main-index">
         <div class="head-sect">
-            <img src="images/book-pic.jpg">
+            <img src="images/tutoring-img.jpg">
             <div class="head-container">
                 <div class="div"></div>
                 <div class="head-text primary">
-                    <h1>BOOKSMART</h1>
+                    <!--<h1>BOOKSMART</h1>
                     <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                         ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                         Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
@@ -62,7 +62,7 @@
                     <br>
                     <p>Book Smart emphasizes a low student to instructor ratio to ensure that we meet your child’s individual needs and 
                         receives the attention they deserve. Our expert staff will engage and motivate your child to reach the highest 
-                        levels of academic success.</p>
+                        levels of academic success.</p>-->
                 </div>
                 <div class="head-text media-head-text">
                   <h1>BOOKSMART</h1>
