--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>BOOKSMART</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="images/boy40px.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,8 +21,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">BOOKSMART</a>
+              <li class="logo-link nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"><img src="images/booksmartLogo25px2.png"></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
@@ -53,28 +53,19 @@
             <img src="images/tutoring-img.jpg">
             <div class="head-container">
                 <div class="div"></div>
-                <div class="head-text primary">
-                    <!--<h1>BOOKSMART</h1>
+                <div class="head-text head-text-main">
+                  <div class="primary-text">
+                    <img src="images/booksmartLogo.png">
                     <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
-                        ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
-                        Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
-                        and led Regents and State Exam grading.</p>
-                    <br>
-                    <p>Book Smart emphasizes a low student to instructor ratio to ensure that we meet your child’s individual needs and 
-                        receives the attention they deserve. Our expert staff will engage and motivate your child to reach the highest 
-                        levels of academic success.</p>-->
-                </div>
-                <div class="head-text media-head-text">
-                  <h1>BOOKSMART</h1>
-                  <p>When we agreed to open a tutoring and learning center, we vowed to aspire to the highest degree of excellence 
                       ever seen on Staten Island. Our staff of educators has been hand selected as the top in their respective areas. 
                       Our staff is comprised of currently certified teachers that have developed curriculum for the Board of Education 
                       and led Regents and State Exam grading.</p>
-                  <br>
-                  <p>Book Smart emphasizes a low student to instructor ratio to ensure that we meet your child’s individual needs and 
+                    
+                      <p>Book Smart emphasizes a low student to instructor ratio to ensure that we meet your child’s individual needs and 
                       receives the attention they deserve. Our expert staff will engage and motivate your child to reach the highest 
                       levels of academic success.</p>
-              </div>
+                  </div>
+                </div>
             </div>
         </div>
         <div class="mid-sect">
