--- a/shsat.html
+++ b/shsat.html
@@ -13,7 +13,7 @@
     <title>BOOKSMART - SHSAT</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="images/boy40px.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
