contact/home updates

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
           </div>
             <div class="gallery">
                 <div class="img-container">
-                    <p>TACHS</p>
+                    <p class="r">TACHS</p>
                     <a href="tachs.html"><img src="images/tachs.jpg"></a>
                 </div>
                 <div class="img-container">
-                    <p>SHSAT</p>
+                    <p class="o">SHSAT</p>
                     <a href="shsat.html"><img src="images/shsat.jpg"></a>
                </div>
                <div class="img-container">
-                <p>PSAT/SAT</p>
+                <p class="g">PSAT/SAT</p>
                 <a href="sat.html"><img src="images/sat.jpg"></a>
                </div>
                <div class="img-container">
-                <p>Regents</p>
-                <a href="regents.html"><img src="images/regents.jpg"></a>
+                <p class="b">Regents</p>
+                <a href="regents.html"><img src="images/regents1.jpg"></a>
                </div>
             </div>
         </div>
