--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <div class="contact-heading">
             <h1>Contact Us!</h1>
         </div>
-        <form target="_blank" action="https://formsubmit.co/eddy.kram@gmail.com" method="POST" class="needs-validation" novalidate>
+        <form target="_blank" action="https://formsubmit.co/booksmarttutor@yahoo.com" method="POST" class="needs-validation" novalidate>
           <input type="hidden" name="_subject" value="New Message!">
           <input type="hidden" name="_template" value="table">
           <input type="hidden" name="_next" value="https://eddykram.github.io/booksmart/thanks.html">
