--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,8 @@
               </div>
               <div class="row">
                 <div class="col-md-4 mb-5">
-                    <label for="inputEmail4">Email</label>
-                    <input name="Email" type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                    <label for="inputEmail4">Phone Number</label>
+                    <input name="Phonenumber" type="tel" class="form-control" id="inputEmail4" placeholder="Phone Number" minlength="10" required>
                   </div>
                   <div class="col-md-4 mb-5">
                     <label for="inputEmail4">Message</label>
